[package]
name = "slipstream"
version = "1.0.0"
edition = "2021"
authors = ["Uli Köhler"]
description = "SLIP (Serial Line Internet Protocol) encoder and decoder with streaming support"
license = "Apache-2.0"
repository = "https://github.com/ulikoehler/slipstream-rs"
readme = "README.md"
keywords = ["slip", "serial", "codec", "stream"]
categories = ["encoding", "network-programming"]

[lib]
name = "slipstream"
path = "src/lib.rs"

[dependencies]
