[package]
name = "slipstream"
version = "1.0.0"
edition = "2021"
authors = ["Uli Köhler"]
description = "SLIP (Serial Line Internet Protocol) encoder and decoder with streaming support"
license = "Apache-2.0"
repository = "https://github.com/ulikoehler/slipstream-rs"
readme = "README.md"
keywords = ["slip", "serial", "codec", "stream"]
categories = ["encoding", "network-programming"]

[lib]
name = "slipstream"
path = "src/lib.rs"

[features]
default = []
async-codec = ["dep:asynchronous-codec", "dep:bytes"]
tokio-codec = ["dep:tokio-util", "dep:bytes"]

[dependencies]
asynchronous-codec = { version = "0.6", optional = true }
tokio-util = { version = "0.7", optional = true, features = ["codec"] }
bytes = { version = "1", optional = true }
memchr = "2"

[dev-dependencies]
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt", "io-util"] }
